Tue Sep 25 06:32:36 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Protect filenames which start with '-' on
	  MS Windows like we already do on other platforms.  The built-in
	  commands generally only interpret '/' as the character introducing a
	  command line option (which we already convert to '\'), but many
	  ported programs understand '-' too/instead.

Sat Aug 25 16:09:50 GMT 2012  Dan Colish <dcolish@gmail.com>

	* include/xapian/enquire.h: Add function to test MSetIterator and
	  ESetIterator exhaustion against the size of the underlying interee
	  since comparison against an empty Itor is not suitable for an
	  exhaustion test. Add FIXME that these Iterators should use an Internal
	  class. 

Thu Aug 09 21:50:52 GMT 2012  Dan Colish <dcolish@gmail.com>

	* weight/weightinternal.h: Include config.h since macros are used
	  from it. 

Wed Aug 08 15:40:38 GMT 2012  Dan Colish <dcolish@gmail.com>

	* api/queryvector.h: Backout previous fix. When compiling with -O0,
	  increase the stack limit to > 8M when running scalability tests.

Wed Aug 08 02:10:21 GMT 2012  Dan Colish <dcolish@gmail.com>

	* api/queryvector.h: Fix SIGBUS when clearing QueryVectors

Wed Aug 01 15:25:25 GMT 2012  Dan Colish <dcolish@gmail.com>

	* HACKING,Makefile.am,tests/Makefile.am: Fix non-portable warnings
	from automake, add HACKING doc for check-syntax make target

Wed Aug 01 04:54:18 GMT 2012  Dan Colish <dcolish@gmail.com>

	* Makefile.am,api/Makefile,backends/Makefile,backends/brass/Makefile,
	  backends/chert/Makefile,backends/inmemory/Makefile,
	  backends/multi/Makefile,backends/remote/Makefile,bin/Makefile,
	  common/Makefile,examples/Makefile,expand/Makefile,
	  geospatial/Makefile,include/Makefile,include/xapian/Makefile,
	  languages/Makefile,matcher/Makefile,net/Makefile,
	  queryparser/Makefile,tests/harness/Makefile,unicode/Makefile,
	  weight/Makefile: Add check-syntax target to Makefiles to support
	  editor syntax checks
